# root

bindings/pyroot/: CMakeLists.txt
bindings/pyroot/inc/: TPyDispatcher.h
bindings/pyroot/src/: RootWrapper.cxx
cmake/modules/: CheckCompiler.cmake  RootCTest.cmake  RootConfiguration.cmake  SearchInstalledSoftware.cmake  SetUpWindows.cmake
cmake/scripts/: compiledata.win64.in
core/base/inc/: Bytes.h  RtypesCore.h  TBuffer.h  TMathBase.h  TQConnection.h  TSystem.h  TVirtualQConnection.h
core/base/src/: TDatime.cxx  TError.cxx  TObject.cxx  TQCommand.cxx  TQConnection.cxx  TStopwatch.cxx  TSystem.cxx
core/clib/src/: getpagesize.c  keys.c
core/dictgen/src/: SelectionRules.cxx
core/lzma/patch/: CMakeLists.txt
core/lzma/patch/src/: CMakeLists.txt
core/lzma/patch/src/common/: sysdefs.h
core/lzma/patch/src/liblzma/api/: lzma.h
core/meta/inc/: TInterpreter.h  TMethodCall.h
core/meta/src/: TDataType.cxx  TMethodCall.cxx
core/metacling/src/: CMakeLists.txt  TCling.cxx  TCling.h  TClingCallFunc.cxx  TClingCallFunc.h
core/metacling/test/: TClingCallFuncTests.cxx
core/thread/inc/: TWin32AtomicCount.h
core/thread/src/: TThread.cxx
core/winnt/inc/: TWinNTSystem.h
core/winnt/src/: Win32Splash.cxx
core/zip/src/: Tailor.h  ZDeflate.c  ZInflate.c
graf2d/asimage/src/: TASImage.cxx  TASPluginGS.cxx
graf2d/win32gdk/inc/: TGWin32ProxyBase.h
graf2d/win32gdk/src/: TGWin32.cxx  TGWin32ProxyBase.cxx
graf3d/ftgl/inc/: FTGL.h
graf3d/ftgl/src/: FTVectoriser.cxx
main/src/: pmain.cxx
objects/: build.bat
test/: stressIterators.cxx
(+82 files in other folders)
